fix(popup): address flexbox issue on iOS 10
Use nested containers as suggested at
https://stackoverflow.com/questions/33636796/chrome-safari-not-filling-100-height-of-flex-parent
more information about the issue at
https://stackoverflow.com/questions/44878379/why-does-width-and-height-of-a-flex-item-affect-how-a-flex-item-is-rendered
or official webkit errors https://bugs.webkit.org/show_bug.cgi?id=136041

fix https://app.asana.com/0/1168997577035609/1179368978953593

--- a/packages/popup-component/src/components/popup/popup.scss
+++ b/packages/popup-component/src/components/popup/popup.scss
@@ -95,3 +95,8 @@
     font-size: $font-size-base * 0.375;
   }
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
